Fix contrast issues
git-svn-id: svn+ssh://murphy/home/svn/platal/trunk@1425 839d8a87-29fc-0310-9880-83ba4fa771e5

--- a/htdocs/css/spectral.css
+++ b/htdocs/css/spectral.css
@@ -72,6 +72,15 @@ table.tinybicol th, table.bicol th {
     background-color: #0067fe;
 }
 
+table.tinybicol th a:link, table.tinybicol th a:visited,
+table.tinybicol th a:active, table.tinybicol th a:hover,
+table.bicol th a:link, table.bicol th a:visited,
+table.bicol th a:active, table.bicol th a:hover {
+    color: #BBF;
+    background: inherit;
+}
+
+
 /*******************************************************************************
     4   Tableau de choix de skins
         [ Styles pour les tableaux de types de ceux des skins ]
